# ake

./: .clinerules  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  alembic.ini  pyproject.toml
ake/: __main__.py  config.py  server.py
ake/compiler/: artifact.py  artifact_compiler.py  citation.py  compiler_loop.py  verifier.py
ake/db/: engine.py  schema.sql
ake/ingestion/: amorphous_pipeline.py  element.py  normalizer.py  pipeline.py  tabular_normalizer.py
ake/llm/: mcp_bridge.py  router.py  tools.py
ake/mcp/: __init__.py  registry.py  server.py
ake/ontology/: __init__.py  builder.py  graph.py  model.py
ake/query/: __init__.py  composer.py  execute.py  fetcher.py  interface.py  planner.py
ake/store/: artifact_store.py  element_store.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: README.md  knowledge-engine-dev-guide.md
docs/adr/: ADR-001-compile-at-ingest.md  ADR-002-citations-mandatory.md  ADR-003-postgres-pgvector-first.md  ADR-004-nulls-first-class.md  ADR-005-promoted-columns.md  ADR-006-separation-of-concerns.md  ADR-007-llm-as-judge-grading.md  ADR-008-polymorphic-citation-addressing.md  ADR-009-direct-mapping-vs-llm-extraction.md  ADR-010-mcp-as-agent-interface.md  ADR-011-llm-router-design.md  ADR-012-zero-declaration-schema-derivation.md  ADR-013-two-pass-fk-inference.md  ADR-014-owl-and-multi-format-ontology-export.md  README.md
docs/features/: F000-infrastructure.md  F001-document-ingestion.md  F002-artifact-compilation.md  F006-skill-library.md  (+10 more)
examples/: README.md
tests/: conftest.py  test_llm_router.py
(+88 files in other folders)
