[project]
name = "amorphous-knowledge-engine"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "pgvector>=0.3",
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
    "litellm>=1.40",
    "mcp>=1.0",
    "tenacity>=8.3",
    "structlog>=24.0",
    "python-dotenv>=1.0",
    "jsonschema>=4.22",
]

[dependency-groups]
ingestion = [
    "unstructured[pdf,docx]>=0.14",
    "pyarrow>=16",
    "rdflib>=7",
    "networkx>=3",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-postgresql>=6",
    "psycopg[binary]>=3.1",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ake"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["ake.llm.*", "ake.db.*"]
strict = true

[[tool.mypy.overrides]]
module = ["litellm.*", "mcp.*", "asyncpg.*", "alembic.*", "structlog.*", "tenacity.*", "jsonschema.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
